# pq-stark-bench

./: .gitignore  CLAUDE.md  Cargo.toml  KICKOFF.md  README.md  justfile  netlify.toml  rust-toolchain.toml
.claude/: launch.json
.claude/skills/cryptography/: SKILL.md
.github/workflows/: bench.yml  ci.yml  deploy-site.yml
crates/bench-native/: Cargo.toml
crates/bench-native/src/: env.rs  main.rs  schemes.rs  stats.rs
crates/bench-zkvm/common/: Cargo.toml
crates/bench-zkvm/common/src/: lib.rs
crates/bench-zkvm/risc0/: Cargo.toml
crates/bench-zkvm/risc0/host/: Cargo.toml
crates/bench-zkvm/risc0/host/src/: main.rs
crates/bench-zkvm/risc0/methods/: Cargo.toml  build.rs
crates/bench-zkvm/risc0/methods/guest/: Cargo.toml
crates/bench-zkvm/risc0/methods/guest-accel/: Cargo.toml
crates/bench-zkvm/risc0/methods/guest-accel/src/: ed25519_accel_verify.rs
crates/bench-zkvm/risc0/methods/guest/src/: ed25519_verify.rs  falcon512_verify.rs  mldsa44_verify.rs  slhdsa128s_verify.rs
crates/bench-zkvm/risc0/methods/src/: lib.rs
crates/bench-zkvm/sp1/: Cargo.toml
crates/bench-zkvm/sp1/program/: Cargo.toml
crates/bench-zkvm/sp1/program-accel/: Cargo.toml
crates/bench-zkvm/sp1/script/: Cargo.toml  build.rs
crates/bench-zkvm/sp1/script/src/: main.rs
crates/pqb-core/: Cargo.toml  build.rs
crates/pqb-core/src/: env.rs  lib.rs  stats.rs  time.rs
crates/tx-format/: Cargo.toml
crates/tx-format/src/: lib.rs
docs/: KICKOFF-v1-superseded.md  LITERATURE.md  METHODOLOGY.md  TECHNICAL-NOTE.md
docs/research/: round1-exec-summary.md  round1-literature-draft.md  round1-tooling-decision.md  round1-verdicts.json  round2-build-plan.md  round2-claims-verified.json  round2-exec-briefing.md  round2-ops-recon.json  round2-refutations.json
results/native/: 2026-07-23T16-29-27Z-attilas-macbook-pro-3-local.json  2026-07-23T16-44-06Z-attilas-macbook-pro-3-local.json
results/zkvm/: 2026-07-23T20-57-44Z-attilas-macbook-pro-3-local-risc0.json  2026-07-23T21-10-47Z-attilas-macbook-pro-3-local-risc0-ed25519-execute-n1.json  2026-07-23T21-10-47Z-attilas-macbook-pro-3-local-risc0-falcon-512-execute-n1.json  2026-07-23T21-10-48Z-attilas-macbook-pro-3-local-risc0-ml-dsa-44-execute-n1.json  2026-07-23T21-22-44Z-attilas-macbook-pro-3-local-sp1-ed25519-execute-n1.json  2026-07-23T21-22-57Z-attilas-macbook-pro-3-local-sp1-falcon-512-execute-n1.json  2026-07-23T21-23-06Z-attilas-macbook-pro-3-local-sp1-ml-dsa-44-execute-n1.json  2026-07-23T21-49-55Z-attilas-macbook-pro-3-local-risc0-ed25519-accel-execute-n1.json  2026-07-23T21-50-14Z-attilas-macbook-pro-3-local-risc0-ed25519-execute-n2.json  2026-07-23T21-50-14Z-attilas-macbook-pro-3-local-risc0-ed25519-execute-n4.json  2026-07-23T21-50-15Z-attilas-macbook-pro-3-local-risc0-ed25519-execute-n16.json  2026-07-23T21-50-15Z-attilas-macbook-pro-3-local-risc0-ed25519-execute-n8.json  2026-07-23T21-50-16Z-attilas-macbook-pro-3-local-risc0-ed25519-accel-execute-n2.json  2026-07-23T21-50-16Z-attilas-macbook-pro-3-local-risc0-falcon-512-execute-n2.json  2026-07-23T21-50-17Z-attilas-macbook-pro-3-local-risc0-falcon-512-execute-n16.json  2026-07-23T21-50-17Z-attilas-macbook-pro-3-local-risc0-falcon-512-execute-n4.json  2026-07-23T21-50-17Z-attilas-macbook-pro-3-local-risc0-falcon-512-execute-n8.json  2026-07-23T21-50-18Z-attilas-macbook-pro-3-local-risc0-ml-dsa-44-execute-n2.json  2026-07-23T21-50-18Z-attilas-macbook-pro-3-local-risc0-ml-dsa-44-execute-n4.json  2026-07-23T21-50-18Z-attilas-macbook-pro-3-local-risc0-ml-dsa-44-execute-n8.json  2026-07-23T21-50-19Z-attilas-macbook-pro-3-local-risc0-ml-dsa-44-execute-n16.json  2026-07-23T21-51-50Z-attilas-macbook-pro-3-local-risc0-ed25519-accel-execute-n4.json  2026-07-23T21-51-51Z-attilas-macbook-pro-3-local-risc0-ed25519-accel-execute-n16.json  2026-07-23T21-51-51Z-attilas-macbook-pro-3-local-risc0-ed25519-accel-execute-n8.json  2026-07-23T21-54-01Z-attilas-macbook-pro-3-local-sp1-ed25519-execute-n2.json  2026-07-23T21-54-10Z-attilas-macbook-pro-3-local-sp1-ed25519-execute-n4.json  2026-07-23T21-54-18Z-attilas-macbook-pro-3-local-sp1-ed25519-execute-n8.json  2026-07-23T21-54-27Z-attilas-macbook-pro-3-local-sp1-ed25519-execute-n16.json  2026-07-23T21-54-37Z-attilas-macbook-pro-3-local-sp1-falcon-512-execute-n2.json  2026-07-23T21-54-46Z-attilas-macbook-pro-3-local-sp1-falcon-512-execute-n4.json  2026-07-23T21-54-55Z-attilas-macbook-pro-3-local-sp1-falcon-512-execute-n8.json  2026-07-23T21-55-05Z-attilas-macbook-pro-3-local-sp1-falcon-512-execute-n16.json  2026-07-23T21-55-14Z-attilas-macbook-pro-3-local-sp1-ml-dsa-44-execute-n2.json  2026-07-23T21-55-23Z-attilas-macbook-pro-3-local-sp1-ml-dsa-44-execute-n4.json  2026-07-23T21-55-31Z-attilas-macbook-pro-3-local-sp1-ml-dsa-44-execute-n8.json  2026-07-23T21-55-41Z-attilas-macbook-pro-3-local-sp1-ml-dsa-44-execute-n16.json  2026-07-23T22-01-56Z-attilas-macbook-pro-3-local-risc0-slh-dsa-sha2-128s-execute-n1.json  2026-07-23T22-02-21Z-attilas-macbook-pro-3-local-sp1-slh-dsa-sha2-128s-execute-n1.json  2026-07-23T22-03-23Z-attilas-macbook-pro-3-local-risc0-slh-dsa-sha2-128s-execute-n2.json  2026-07-23T22-03-27Z-attilas-macbook-pro-3-local-risc0-slh-dsa-sha2-128s-execute-n4.json  (+11 more)
scripts/: check-copy.sh
site/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
site/scripts/: build-note.mjs  collect-results.mjs
site/src/: App.tsx  Nav.tsx  NotePage.tsx  components.tsx  data.ts  index.css  main.tsx
