[workspace]
resolver = "2"
members = ["crates/tx-format", "crates/bench-native"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/attilatb/pq-stark-bench"

[profile.release]
# Benchmarks must be optimized, and we want reproducible codegen.
# Declared at the workspace root because cargo ignores member profiles.
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Classical baselines.
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
k256 = { version = "0.14.0", features = ["ecdsa"] }
# The RustCrypto 2026 releases moved to rand_core 0.10, where the system RNG
# lives in getrandom as SysRng and is adapted to CryptoRng via UnwrapErr.
getrandom = { version = "0.4", features = ["sys_rng"] }
sha2 = "0.10"
hex = "0.4"

# Post-quantum schemes. All pure Rust, chosen over the pqcrypto-* PQClean C
# wrappers because those have no evidence of building inside a zkVM guest and
# Phase 2 needs the same implementation in-guest as out.
fips204 = "0.4.6"   # ML-DSA (FIPS 204)
fips205 = "0.4.1"   # SLH-DSA (FIPS 205)
fn-dsa = "0.4.0"    # Falcon / FN-DSA. NIST selected; no published FIPS draft.
# The post-quantum crates above are built against rand_core 0.6, while the
# RustCrypto classical crates use rand_core 0.10. Both majors coexist.
rand_core_06 = { package = "rand_core", version = "0.6.4", features = ["getrandom"] }
