[package]
name = "bench-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native (non-circuit) signature benchmarks for PQ-STARK-BENCH"

[dependencies]
tx-format = { path = "../tx-format" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

ed25519-dalek = { workspace = true }
k256 = { workspace = true }
getrandom = { workspace = true }

[[bin]]
name = "bench-native"
path = "src/main.rs"
