[package]
name = "pqb-sp1-program-accel"
version = "0.1.0"
edition = "2021"

# Reuses the exact same ML-DSA-44 guest source as the stock program, but this
# crate patches sha3 to SP1's accelerated fork, so fips204's SHAKE-256 calls
# route into the KECCAK_PERMUTE precompile. The cycle delta versus the stock
# build is the measured value of the Keccak precompile for ML-DSA verification.
[[bin]]
name = "mldsa44_accel_verify"
path = "../program/src/bin/mldsa44_verify.rs"

[dependencies]
sp1-zkvm = "6.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-44"] }

[patch.crates-io]
# SP1's accelerated sha3, routing Keccak-f[1600] to the KECCAK_PERMUTE
# precompile. fips204 depends on sha3 ^0.10.2, and this fork is 0.10.8.
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-6.2.0" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[workspace]
