[package]
name = "pqb-sp1-host"
version = "0.1.0"
edition = "2021"
description = "Drives the SP1 prover/executor for signature verification and writes zkVM results files"

[dependencies]
pqb-zkvm-common = { path = "../../common" }
tx-format = { path = "../../../tx-format" }
pqb-core = { path = "../../../pqb-core" }
# The blocking feature exposes the synchronous ProverClient used here.
sp1-sdk = { version = "6.0", features = ["blocking"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
fn-dsa = "0.4.0"
fips204 = "0.4.6"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
sp1-build = "6.0"

[[bin]]
name = "sp1-bench"
path = "src/main.rs"
