[package]
name = "pqb-guest-accel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ed25519_accel_verify"
path = "src/ed25519_accel_verify.rs"

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
ed25519-dalek = { version = "2.1", default-features = false }

# Route curve25519 field arithmetic to the RISC Zero accelerator. This is the
# whole point of this crate: the same Ed25519 verification as the stock guest,
# but with the precompile engaged. The cycle delta versus the stock guest is
# the measured value of the precompile.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
# The accelerated curve25519-dalek fork depends on a patched crypto-bigint that
# adds a `risc0` acceleration module. Both patches are required together.
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

# Isolate this guest from the outer repo workspace.
[workspace]
