[package]
name = "pqb-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ed25519_verify"
path = "src/ed25519_verify.rs"

[[bin]]
name = "falcon512_verify"
path = "src/falcon512_verify.rs"

[[bin]]
name = "mldsa44_verify"
path = "src/mldsa44_verify.rs"

[[bin]]
name = "slhdsa128s_verify"
path = "src/slhdsa128s_verify.rs"

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Classical control. Stock portable backend, no curve25519 precompile: the
# honest worst case. An accelerated variant is measured separately.
ed25519-dalek = { version = "2.1", default-features = false }

# Falcon-512 / FN-DSA verification. Integer-only and no_std, so it is safe in a
# soft-float guest. This is the cleanest post-quantum leg.
fn-dsa-vrfy = { version = "0.4.0", default-features = false }

# ML-DSA-44 (FIPS 204). Pure Rust, no_std. The ml-dsa-44 parameter set is
# feature-gated; default-rng is left off because the guest has no OS RNG and
# verification needs none. Stock: no SHAKE precompile reaches it (disclosed).
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-44"] }

# SLH-DSA-SHA2-128s (FIPS 205). Hash-based, no_std. Stock: no SHA-256
# precompile is routed here (disclosed). Verification needs no RNG.
fips205 = { version = "0.4.1", default-features = false, features = ["slh_dsa_sha2_128s"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

# Isolate this guest from the outer repo workspace: it builds for the RISC Zero
# guest target with its own pinned toolchain.
[workspace]
